# Mini-DeepLLM

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: v4_200m_single_a100.json  v4_500m_single_a100.json
data/tokenizer_data/: chat_template.jinja2
data_loader/: __init__.py  pretrain_dataset.py  utils.py
mini_models/: __init__.py  cache.py  generator.py  norm.py  rope.py
mini_models/attention/: __init__.py  csa_hca.py  flash_attention_triton.py  gated_attention.py  gated_delta_net.py  mla.py  standard_attention.py  utils.py
mini_models/ffn/: __init__.py  geglu.py  moe.py  swiglu.py
mini_models/mini_deepseekv4/: configuration_mini_deepseekv4.py  modeling_mini_deepseekv4.py
mini_tokenizer/: merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
scripts/: download_data.ps1  download_data.sh  estimate_params.py  prepare_pretrain_data.py  prepare_tokenizer_data.py  sanity_check.py  setup.ps1  setup.sh
train/: pretrain.py  utils.py
